--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "npm": "^8.10.0",
+    "stripe": "^9.2.0"
   }
 }
